very wip magic words

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div id="app">
         <div id="pixi-container"></div>
     </div>
+    <img src="https://api.dicebear.com/9.x/fun-emoji/png?seed=Jocely" width="200" height="200"/>
     <script type="module" src="/src/main.ts"></script>
 </body>
 </html>
